changed Atom to VS Code

--- a/03-Directories.Rmd
+++ b/03-Directories.Rmd
@@ -91,7 +91,7 @@ Relative paths on the other hand tell us the location of a file relative a worki
 
 ### Preferred Method: Creating a Project {-}
 
-Let's say you're working on an experiment and you'd like to write a reproducible lab report using Markdown in RStudio. The first step is to create a new R project--which creates a file ending in `.Rproj`. A `.Rproj` file is a file that sits in the root directory of your project. When you open your RStudio session via this project file, it automatically tells `R` to use that root folder as your working directory. In other words, it tells R to look relatie to this root folder for any files or folders you refer to within your R Markdown script.
+Let's say you're working on an experiment and you'd like to write a reproducible lab report using Markdown in RStudio. The first step is to create a new R project--which creates a file ending in `.Rproj`. A `.Rproj` file is a file that sits in the root directory of your project. When you open your RStudio session via this project file, it automatically tells `R` to use that root folder as your working directory. In other words, it tells R to look to this root folder for any files or folders you refer to within your R Markdown script.
 
 The biggest benefit to this approach for setting a working directory is that if you decide--or need--to move your project's root folder to another location on your computer or transfer your project's root folder to a different computer, all of the file paths specified in your `R` script will still be valid and work, because they will all be relative to your project's root folder. 
 
@@ -156,6 +156,6 @@ Finally, `R` will bring you back to the main screen and under the 'Files' region
 If you close RStudio and want to re-open the project you'll need to tell R that you want to use the root folder with the project file in it as your working directory. To do this, you'll need to locate the project file on your computer and open it, or open RStudio and select 'Open Project' under the 'File' drop down menu. 
 </div> 
 
-You may have heard of other methods that can be used to set a working directory in `R`. In fact, there's a built in command--`setwd()`--to set a working directory other than the one currently being used. If you chose this method over using an R Project file, you would need to set your working directory every time you wanted to work on your project, or, alternatively, have the first line of code in your script set your working directory using an absolute path. The downside of using this method is that it relies on extra steps or [absolute paths](https://ubco-biology.github.io/Procedures-and-Guidelines/relative-and-absolute-paths) to access your working directory. Consequently, if you move the project's root folder--containing all the files related to your experiment--you'll have to edit your `R` script and change the absolute path. This impacts computational reproducibility. If you send your work to a lab partner or colleague they will have to edit the script, updating the absolute path to match where they've placed the project folder on their computer. An R project negates this problem by leveragin [relative paths](https://ubco-biology.github.io/Procedures-and-Guidelines/relative-and-absolute-paths).
+You may have heard of other methods that can be used to set a working directory in `R`. In fact, there's a built in command--`setwd()`--to set a working directory other than the one currently being used. If you chose this method over using an R Project file, you would need to set your working directory every time you wanted to work on your project, or, alternatively, have the first line of code in your script set your working directory using an absolute path. The downside of using this method is that it relies on extra steps or [absolute paths](https://ubco-biology.github.io/Procedures-and-Guidelines/relative-and-absolute-paths) to access your working directory. Consequently, if you move the project's root folder--containing all the files related to your experiment--you'll have to edit your `R` script and change the absolute path. This impacts computational reproducibility. If you send your work to a lab partner or colleague they will have to edit the script, updating the absolute path to match where they've placed the project folder on their computer. An R project negates this problem by leveraging [relative paths](https://ubco-biology.github.io/Procedures-and-Guidelines/relative-and-absolute-paths).
 
 
